refactor: find all events and api docs
